Fix project view chart spacing

--- a/client/src/app/features/user/project-view/components/production-charts/production-charts.component.scss
+++ b/client/src/app/features/user/project-view/components/production-charts/production-charts.component.scss
@@ -1,5 +1,6 @@
 :host {
   display: block;
+  margin-top: 1.5rem;
 }
 
 .view-card {
